# audio-to-text

./: Makefile  README.md  pyproject.toml
src/: recognizer.py
src/transcriber/: spk_transcriber.py  transcriber.py
src/transcriber/audio_file_tools/: __init__.py  audio_file_convertors.py  audio_file_parsers.py
src/transcriber/spk_tools/: clusters.py  utils.py
